--- a/Micro/HW3/MasonTate_HW3.tex
+++ b/Micro/HW3/MasonTate_HW3.tex
@@ -120,6 +120,10 @@
         $\frac{w_1}{w_2}=\frac{z_1^{-1}}{z_2^{-1}}$ \\
         $\frac{w_1}{w_2}=\frac{z_2}{z_1}$ \\
         $z_2 = \frac{w_1z_1}{w_2}$ \\
+      \end{center}
+      Plugging into the FOC for $z_1$, we get the following
+      \begin{center}
+        $p(\frac{1}{\rho})(z_1^{\rho}(\frac{w_1z_1}{w_2})^{\rho})^{\frac{1}{\rho}-1}\cdot(\rho z_1^{\rho-1}(\frac{w_1z_1}{w_2})^{\rho})=w_1$ \\
         
 
   \section{Question 5.C.10}
