--- a/Micro/HW3/MasonTate_HW3.tex
+++ b/Micro/HW3/MasonTate_HW3.tex
@@ -96,86 +96,101 @@
   \newpage
 
   \section{Question 3.I.5}
-    \subsection{Problem}
+    \subsection*{Problem}
       Show that if $u(x)$ is quasilinear with respect to the first good ($p_1$ fixed at 1), then $CV(p^0,p^1,w)=EV(p^0,p^1,w)$ for any $(p^0,p^1,w)$.
-    \subsection{Solution}
+    \subsection*{Solution}
     \begin{proof}
-      
+    \end{proof}
   \section{Question 5.C.9}
-    \subsection{Problem}
-      Derive the profit function $\pi(p)$ and supply function $y(p)$ for the single output technologies whose production functions $f(z)$ are given by:
+    \subsection*{Problem}
+      Derive the profit function $\pi(p)$ and supply function $y(p)$ for the single output technologies whose production functions $f(z)$ are given by
 
       (b) $f(z)=\sqrt{\min\{z_1,z_2\}}$
 
-      (c) $f(z)=(z_1^{\rho}z_2^{\rho})^{\frac{1}{\rho}}$ for $\rho\leq1$ 
-    \subsection{Solution}
+      (c) $f(z)=(z_1^{\rho}z_2^{\rho})^{\frac{1}{\rho}}$ for $\rho\leq1$ \\
+
+    \subsection*{Solution}
+      (b) $y = \sqrt{\min z_1,z_2}$. In this case, $z_1=z_2$ so,
+
+      \begin{center}
+        $y = \sqrt{z_1}$ \\
+        $\pi(p) = p\sqrt{z_1}-z_1(w_1+w_2)$ \\
+        $z_1: \frac{1}{2} p z_1^{-\frac{1}{2}}-w_1-w_2=0$ \\
+        $\frac{1}{2}pz_1^{-\frac{1}{2}}=w_1+w_2$ \\
+        $pz_1^{-\frac{1}{2}}=2(w_1+w_2)$ \\
+        $z_1 = (\frac{p}{2(w_1+w_2)})^2$ \\
+        $\pi(p) = \frac{p^2}{2(w_1+w_2)}-(\frac{p}{2(w_1+w_2)})^2(w_1+w_2)$ \\
+        $\pi(p)=\frac{p^2}{2(w_1+w_2)}-\frac{p^2}{4(w_1+w_2)}$ \\
+        $\Aboxed{\pi(p) = \frac{p^2}{4(w_1+w_2)}}$
+      \end{center}
+
+      (c) $y = (z_1^{\rho}+z_2^{\rho})^{\frac{1}{\rho}}$ for $\rho\leq1$
       
-  \section{Question 5.C.10}
-    \subsection{Problem}
+\section{Question 5.C.10}
+    \subsection*{Problem}
       Derive the cost function $c(w,q)$ and conditional function demand functions (or correspondences) $z(w,q)$ for each of the following single-output constant return technologies with production functions:
 
       (b) $f(z)=\min\{z_1,z_2\}$ (Leontief technology)
         
-      (c) $f(z)=(z_1^{\rho}z_2^{\rho})^{\frac{1}{\rho}}$ for $\rho\leq1$ (CES technology) 
-    \subsection{Solution}
+      (c) $f(z)=(z_1^{\rho}+z_2^{\rho})^{\frac{1}{\rho}}$ for $\rho\leq1$ (CES technology) 
+    \subsection*{Solution}
       (b) 
       \begin{center}
-        ${\max\atop{\vec{z}\geq0}}-\vec{w}\cdot\vec{z}$
+        ${\min\atop{\vec{z}\geq0}}\vec{w}\cdot\vec{z}$
       \end{center}
       s.t.
       \begin{center}
-        $\min\{z_1,z_2\}\geq q$ \\
-        $-\vec{z}\leq0$ \\
+        $\min\{z_1,z_2\}\leq q$ \\
+        $\vec{z}\geq0$ \\
       \end{center}
 
       \begin{center}
-
+        $z_1=z_2=q$ \\
+        $\Aboxed{C(w,q)=q(w_1+w_2)}$ \\
+        $\Aboxed{z_1(w,q) = w_1q}$ \\
+        $\Aboxed{z_2(w,q) = w_2q}$ \\
+      \end{center}
       (c)
       \begin{center}
-        ${\max\atop{\vec{z}\geq0}}-\vec{w}\cdot\vec{z}$ \\
+        ${\min\atop{\vec{z}\geq0}}\vec{w}\cdot\vec{z}$ \\
       \end{center}
       s.t.
       \begin{center}
-        $-z_1^{\rho}z_2^{\rho}\geq q$ \\
-        $-\vec{z}\leq 0$
+        $(z_1^{\rho}+z_2^{\rho})^{\frac{1}{\rho}}\leq q$ \\
+        $\vec{z}\geq 0$
       \end{center}
 
       \begin{center}
-        $\vec{w}=\lambda\begin{bmatrix}p(z_1^{\rho}z_2^{\rho})^{\frac{1}{\rho}-1}\cdot(z_1^{\rho-1}z_2^{\rho}) \\ p(z_1^{\rho}z_2^{\rho})^{\frac{1}{\rho}-1}\cdot(z_1^{\rho}z_2^{\rho-1})\end{bmatrix} + \vec{\mu}$
+        $\vec{w}=\lambda\begin{bmatrix}p\frac{1}{\rho}(z_1^{\rho}+z_2^{\rho})^{\frac{1}{\rho}-1}\cdot(\rhoz_1^{\rho-1}) \\ p\frac{1}{\rho}(z_1^{\rho}+z_2^{\rho})^{\frac{1}{\rho}-1}\cdot(\rho z_2^{\rho-1})\end{bmatrix} + \vec{\mu}$
       \end{center}
       s.t.
       \begin{center}
         $\vec{\mu}\cdot\vec{z}=0$ \\
         $\lambda(q-f(\vec{z}))=0$ \\
       \end{center}
-      Solving for $z_2$
+      Solving for $z_1$
       \begin{center}
-        $\frac{w_1}{w_2}=\frac{z_2}{z_1}\Rightarrow z_2 = \frac{w_1}{w_2}z_1$
+        $\frac{w_1}{w_2}=(\frac{z_1}{z_2})^{\rho-1}\Rightarrow z_1 = (\frac{w_1}{w_2})^{\frac{1}{\rho-1}}z_2$ \\
       \end{center}
       Plug back into $f(\vec{z})$
       \begin{center}
-        $(z_1^{\rho}(z_1(\frac{w_1}{w_2}))^{\rho})^{\frac{1}{\rho}}=q$ \\
-        $(z_1^2(\frac{w_1}{w_2}))^{\rho} = q^{\rho}$ \\
-        $z_1^2=q(\frac{w_2}{w_1})$ \\
-        $\Aboxed{z_1(w,q) = \sqrt{q(\frac{w_2}{w_1})}}$ \\
-      \end{center}
-      By extension, $z_2$ is
-      \begin{center}
-        $\Aboxed{z_2(w,q) = \sqrt{q(\frac{w_1}{w_2})}}$ \\
-      \end{center}
-      Thus, plugging back in for $C(\vec{w},q)$ we get
-      \begin{center}
-        $\Aboxed{C(\vec{w},q) = q^{\frac{1}{2}}(w_2^{\frac{1}{2}} + w_1^{\frac{1}{2}})}$
+        $((z_2(\frac{w_1}{w_2})^{\frac{1}{\rho-1}})^{\rho}+z_2^{\rho})^{\frac{1}{\rho}}=q$ \\
+        $((z_2(\frac{w_1}{w_2})^{\frac{1}{\rho-1}})^{\rho}+z_2^{\rho} = q^{\rho}$ \\
+        $(z_2((\frac{w_1}{w_2})^{\frac{1}{\rho-1}}+1))=q$ \\
+        $z_2(\frac{w_1}{w_2})^{\frac{1}{\rho-1}}=q-1$ \\
+        $\Aboxed{z_2(w,q) = (\frac{w_2}{w_1})^{\frac{1}{\rho-1}}q-1}$ \\
+        $\Aboxed{z_1(w,q) = (\frac{w_1}{w_2})^{\frac{1}{\rho-1}}q-1}$ \\
+        $\Aboxed{C(w,q) = q-1(w_1(\frac{w_1}{w_2})^{\frac{1}{\rho-1}})+w_2(\frac{w_2}{w_1})^{\frac{1}{\rho-1}}}$ \\ 
       \end{center}
   \section{Question 5.C.11}
-    \subsection{Problem}
+    \subsection*{Problem}
       Show that $\frac{\partial z_l(w,q)}{\partial q}>0$ if and only if marginal cost at q is increasing in $w_l$.
-    \subsection{Solution}
+    \subsection*{Solution}
       \begin{proof}
         This can be proven using Shephard's Lemma such that $z_l(w,q) = \frac{\partial C(w,q)}{\partial w_l}$. Marginal cost, then, is given as $\frac{\partial c(w,q)}{\partial q}$. So, we should show that $\frac{\partial z_l (w,q)}{\partial q}\Leftrightarrow \frac{\partial^2c(w,q)}{\partial q\partial w_l}$. Using Shephard's Lemma and symmetry of second derivatives, it can be shown that $\frac{\partial z_l(w,q)}{\partial q} = \frac{\partial^2 c(w,q)}{\partial w_l\partial q}=\frac{\partial^2 c(w,q)}{\patial q\partial w_l}$. Thus, $\frac{\partial z_l(w,q)}{\partial q}>0\Leftrightarrow \frac{\partial^2c(w,q)}{\partial q\partial w_l}>0$, showing that conditional factor demand for input $l$ increases with output if and only if the marginal cost is increasing in the price of input $l$.
       \end{proof}
   \section{Question 5}
-    \subsection{Problem}
+    \subsection*{Problem}
       A firm uses 2 inputs, $z_1$ and $z_2$, which it purchases at prices $w_1$ and $w_2$ to produce a single output. The firm's technology is described by production function $f$ which is strictly increasing and obeys the Inada conditions ${\lim\atop{z_1\righarrow0}}\frac{\partial f(z_1,z_2)}{\partial z_1}={\lim\atop{z_1\rightarrow0}}\frac{\partial f(z_1, z_2)}{\partial z_2}=\infty$ for each $x$. (Hence, the firm will always choose to use a strictly positive quantity of each input.)
 
       (a) Set up firm's cost minimization problem, write down its Lagrangian, find firm's first order conditions for cost minimization.
@@ -194,12 +209,50 @@
         - the price of firm's output $p$.
 
       How can she use these data to recover the firm's markup?
-    \subsection{Solution}
-      
+    \subsection*{Solution}
+      (a)
+      \begin{center}
+        $\min_{z_1,z_2} w_1z_1+w_2z_2$
+      \end{center}
+      s.t.
+      \begin{center}
+        $f(z_1,z_2)\geq q$ \\
+        $z_1,z_2\geq0$
+      \end{center}
+      Lagrangian:
+      \begin{center}
+        $\mathcal{L} = w_1z_1+w_2z_2 - \lambda(f(z_1,z_2)-q)$ \\
+      \end{center}
+      FOC's:
+      \begin{center}
+        $\frac{\partial\mathcal{L}}{\partial z_1}=w_1-\lambda\frac{\partial f}{\partial z_1}=0\Rightarrow w_1 = \lambda\frac{\partial f}{\partial z_1}$ \\
+        $\frac{\partial\mathcal{L}}{\partial z_2}=w_2-\lambda\frac{\partial f}{\partial z_2}=0\Rightarrow w_2 = \lambda\frac{\partial f}{\partial z_2}$ \\
+        $\frac{\partial\mathcal{L}}{\partial \lambda}=q-f(z_1,z_2)=0$ \\
+      \end{center}
+
+      (b) Envelope theorem:
+      \begin{center}
+        $\Aboxed{\frac{\partial C(w,q)}{\partial q}=\frac{\mathcal{L}}{\partial q}=\lambda}$
+      \end{center}
+
+      This implies that $\lambda$ is the marginal cost.
+
+      (c) 
+      $z_1$'s FOC gives us the price of input 1: 
+      \begin{center}
+        $w_1 = \lambda\frac{\partial f}{\partial z_1}$ \\
+        $\lambda = \frac{w_1}{\frac{\partial f}{\partial z_1}}$ \\
+      \end{center}
+      As established above, $\lambda$ is marginal cost. The markup ratio is $\frac{p}{\lambda}$. So, we can define markup as follows,
+      \begin{center}
+        Markup = $\Aboxed{p\times\frac{\frac{\partial f}{\partial z_1}}{w_1}}$
+      \end{center}
+
+      So, we can conclude by saying that the economist can find markup by multiplying price by the ratio of product 1's marginal product and price. 
   \section{Question 6.B.2}
-    \subsection{Problem}
+    \subsection*{Problem}
       Show that if the preference relation $\succeq$ on $\mathcal{L}$ is represented by a utility function $U(\cdot)$ that has the expected utility form, then $\succeq$ satisfies the independence axiom. 
-    \subsection{Solution}
+    \subsection*{Solution}
       \begin{proof}
         Assume there exists a lottery with utility of the form $U(L)=\sum p_iu(x_i)$ such that $u(x_i)$ is the utility of outcome $x_i$. Next, allow for $L, L', L''\in \mathcal{L}$ and $\alpha\in(0,1)$. Now, assume $L\succeq L'$. This implies $U(L)\gew U(L')$. Consider a compound lottery in which $\alpha L+(1-\alpha)L'' \Rightarrow \alpha U(L)+(1-\alpha)U(L'')$. Then, consider the compound lottery $\alpha L' +(1-\alpha)L''\Rightarrow \alpha U(L')+(1-\alpha)U(L'')$. Because $U(L)\geq U(L')$, we can say that $\alpha U(L)+(1-\alpha)U(L'')\geq \alpha U(L')+(1-\alpha)U(L'')$. Then, $\alpha L+(1-\alpha)L''\succeq \alpha L'+(1-\alpha) L''$. The reverse can be shown via the same process. This shows that if one lottery is preferred to another, the compound lottery in which a third, less preferred, lottery is included will not change the preference ordering.  
       \end{proof}
