--- a/Micro/HW3/MasonTate_HW3.tex
+++ b/Micro/HW3/MasonTate_HW3.tex
@@ -100,6 +100,7 @@
       Show that if $u(x)$ is quasilinear with respect to the first good ($p_1$ fixed at 1), then $CV(p^0,p^1,w)=EV(p^0,p^1,w)$ for any $(p^0,p^1,w)$.
     \subsection*{Solution}
     \begin{proof}
+      Because we know that initial price of good 1 is fixed, we know that Hicksian demand is independent of wealth. Therefore, there is no minimum utility level, $\bar u$ which needs to be reached. Because of this, we can write $x(p,w)=x(p)=h(p)=h(p,w)$. Further, $e(p,u) = p\cdot h(p)$ in this case. So, we see that $CV = h(p^1)$ and $EV = h(p^0)$. Since prices are fixed, we can say that $CV(p^0,p^1,w)=EV(p^0,p^1,w)$ for any $(p^0,p^1,w)$. 
     \end{proof}
   \section{Question 5.C.9}
     \subsection*{Problem}
