--- a/Micro/HW3/MasonTate_HW3.tex
+++ b/Micro/HW3/MasonTate_HW3.tex
@@ -127,6 +127,32 @@
 
       (c) $y = (z_1^{\rho}+z_2^{\rho})^{\frac{1}{\rho}}$ for $\rho\leq1$
       
+      \begin{center}
+        $\pi(p)=p(z_1^{\rho}+z_2^{\rho})^{\frac{1}{\rho}}-w_1z_1-w_2z_2$ \\
+      \end{center}
+      Finding FOC's
+      \begin{center}
+        $z_1: p\cdot\frac{1}{\rho}(z_1^{\rho}+z_2^{\rho})^{\frac{1}{\rho-1}}\cdot\rho z_1^{\rho-1} - w_1 = 0$ \\
+        $z_2: p\cdot\frac{1}{\rho}(z_1^{\rho}+z_2^{\rho})^{\frac{1}{\rho-1}}\cdot\rho z_2^{\rho-1} - w_2 = 0$ \\
+      \end{center}
+      Isolating $z_1$:
+      \begin{center}
+        $\frac{w_1}{w_2}=(\frac{z_1}{z_2})^{\rho-1}$ \\
+        $z_1 = z_2(\frac{w_1}{w_2})^{\frac{1}{\rho-1}}$
+      \end{center}
+      Put back into production function
+      \begin{center}
+        $y = z_2^{\rho}((\frac{w_1}{w_2})^{\frac{\rho}{\rho-1}}+1)^{\frac{1}{\rho}}$ 
+      \end{center}
+      Solving for $z_2$
+      \begin{center}
+        $z_2 = y(\frac{w_2^{\frac{\rho}{\rho-1}}}{(w_1+w_2)^{\frac{\rho}{\rho-1}}})^{\frac{1}{\rho}}$ \\
+        $C = y((w_1+w_2)^{\frac{\rho}{\rho-1}})^{\frac{\rho-1}{\rho}}$ \\
+        $\pi = py-y((w_1+w_2)^{\frac{\rho}{\rho-1}})^{\frac{\rho-1}{\rho}}$ \\
+      \end{center}
+      Got lost around solving for $z_2$. Going to speak to Dr. Yoder at office hours. Think I made a calculus mistake.
+
+
 \section{Question 5.C.10}
     \subsection*{Problem}
       Derive the cost function $c(w,q)$ and conditional function demand functions (or correspondences) $z(w,q)$ for each of the following single-output constant return technologies with production functions:
