--- a/Micro/HW3/MasonTate_HW3.tex
+++ b/Micro/HW3/MasonTate_HW3.tex
@@ -281,6 +281,6 @@
       Show that if the preference relation $\succeq$ on $\mathcal{L}$ is represented by a utility function $U(\cdot)$ that has the expected utility form, then $\succeq$ satisfies the independence axiom. 
     \subsection*{Solution}
       \begin{proof}
-        Assume there exists a lottery with utility of the form $U(L)=\sum p_iu(x_i)$ such that $u(x_i)$ is the utility of outcome $x_i$. Next, allow for $L, L', L''\in \mathcal{L}$ and $\alpha\in(0,1)$. Now, assume $L\succeq L'$. This implies $U(L)\gew U(L')$. Consider a compound lottery in which $\alpha L+(1-\alpha)L'' \Rightarrow \alpha U(L)+(1-\alpha)U(L'')$. Then, consider the compound lottery $\alpha L' +(1-\alpha)L''\Rightarrow \alpha U(L')+(1-\alpha)U(L'')$. Because $U(L)\geq U(L')$, we can say that $\alpha U(L)+(1-\alpha)U(L'')\geq \alpha U(L')+(1-\alpha)U(L'')$. Then, $\alpha L+(1-\alpha)L''\succeq \alpha L'+(1-\alpha) L''$. The reverse can be shown via the same process. This shows that if one lottery is preferred to another, the compound lottery in which a third, less preferred, lottery is included will not change the preference ordering.  
+        Assume there exists a lottery with utility of the form $U(L)=\sum p_iu(x_i)$ such that $u(x_i)$ is the utility of outcome $x_i$. Next, allow for $L, L', L''\in \mathcal{L}$ and $\alpha\in(0,1)$. Now, assume $L\succeq L'$. This implies $U(L)\geq U(L')$. Consider a compound lottery in which $\alpha L+(1-\alpha)L'' \Rightarrow \alpha U(L)+(1-\alpha)U(L'')$. Then, consider the compound lottery $\alpha L' +(1-\alpha)L''\Rightarrow \alpha U(L')+(1-\alpha)U(L'')$. Because $U(L)\geq U(L')$, we can say that $\alpha U(L)+(1-\alpha)U(L'')\geq \alpha U(L')+(1-\alpha)U(L'')$. Then, $\alpha L+(1-\alpha)L''\succeq \alpha L'+(1-\alpha) L''$. The reverse can be shown via the same process. This shows that if one lottery is preferred to another, the compound lottery in which a third, less preferred, lottery is included will not change the preference ordering.  
       \end{proof}
 \end{document}
