PS4 (Don't think anything changed)

--- a/Macro/PS4/MasonTate_PS4.tex
+++ b/Macro/PS4/MasonTate_PS4.tex
@@ -101,7 +101,7 @@
   \subsection{Problem}
     Consider the following planning problem
     \begin{center}
-      $w(k_0)={\max\atop{k_{t+1}, c_t\geq0}}\sum_{t=0}^{\infty}\beta^t\frac{c_t^{\1-\sigma}}{1-\sigma}$
+      $w(k_0)={\max\atop{k_{t+1}, c_t\geq0}}\sum_{t=0}^{\infty}\beta^t\frac{c_t^{1-\sigma}}{1-\sigma}$
     \end{center}
     s.t.
     \begin{center}
