--- a/Macro/PS4/MasonTate_PS4.tex
+++ b/Macro/PS4/MasonTate_PS4.tex
@@ -114,6 +114,8 @@
     (b) Solve the Bellman equation you wrote using guess-and-verify method (hint: try $v(k)=A\frac{k_t^{1-\sigma}}{1-\sigma}$).
 
     (c) What is the growth rate of $k_t$ and $c_t$ in this economy? (use you answer in part (b) to answer this). Under what condition does the economy grow?
+  \subsection*{Solution}
+    
 \section{Question 2}
   \subsection{Problem}
     Let $n_t$ denote hours worked. Consider the following planning problem ($n_t$ is hours worked)
