--- a/Macro/PS4/MasonTate_PS4.tex
+++ b/Macro/PS4/MasonTate_PS4.tex
@@ -98,7 +98,7 @@
 
   \newpage
 \section{Question 1}
-  \subsection{Problem}
+  \subsection*{Problem}
     Consider the following planning problem
     \begin{center}
       $w(k_0)={\max\atop{k_{t+1}, c_t\geq0}}\sum_{t=0}^{\infty}\beta^t\frac{c_t^{1-\sigma}}{1-\sigma}$
@@ -115,9 +115,35 @@
 
     (c) What is the growth rate of $k_t$ and $c_t$ in this economy? (use you answer in part (b) to answer this). Under what condition does the economy grow?
   \subsection*{Solution}
-    
+    (a) The Bellman equation can be written as such
+    \begin{center}
+      $v(k_0)={\max\atop{k_1\geq0}}\{\frac{c_t^{1-\sigma}}{1-\sigma}+\beta v(k_1)\}$ \\
+    \end{center}
+    s.t.
+    \begin{center}
+      $c_t + k_1 \leq zk_0+(1-\delta)k_0$ \\
+    \end{center}
+    (b) Solving the Bellman equation. First, let's plug in $v(k_1) = A\frac{k_1^{1-\sigma}}{1-\sigma}$
+    \begin{center}
+      ${\max\atop{k_1\geq0}}\{\frac{(zk_0+(1-\delta)k_0-k_1)^{1-\sigma}}{1-\sigma}+\beta A\frac{k_1^{1-\sigma}}{1-\sigma}\}$ \\
+    \end{center}
+    Then, find the FOC w.r.t. $k_1$
+    \begin{center}
+      $-(zk_0+(1-\delta)k_0-k_1)^{-\sigma}+\beta Ak_1^{-\sigma}$ \\
+      $\beta Ak_1^{-\sigma}=(zk_0+(1-\delta)k_0-k_1)^{-\sigma}$ \\ 
+    \end{center}
+    Now, solve for $k_1$
+    \begin{center}
+      $(\beta A)^{\frac{1}{-\sigma}}k_1 = zk_0+(1-\delta)k_0-k_1$ \\
+      $k_1((\beta A)^{\frac{1}{-\sigma}}+1)=zk_0+(1-\delta)k_0$ \\
+      $k_1 = \frac{zk_0+(1-\delta)k_0}{1+(\beta A)^{\frac{1}{-\sigma}}}$ \\
+    \end{center}
+    Plug back into maximization
+    \begin{center}
+      ${\max\atop{k_t}} \{\frac{zk_t+(1-\delta)k_t-zk_t+(1-\delta)k_t(1+(\beta A))^{\frac{1}{\sigma}}}{1-\sigma}+\beta\frac{A}{1-\sigma}\frac{zk_t+(1-\delta)k_t(1+(\beta A)^{\frac{1}{\sigma}})}{1-\sigma}\}$ \\ 
+      $ =  $
 \section{Question 2}
-  \subsection{Problem}
+  \subsection*{Problem}
     Let $n_t$ denote hours worked. Consider the following planning problem ($n_t$ is hours worked)
     \begin{center}
       $w(k_0) = \max\sum_{t=0}^{\infty}\beta^t[\theta\log c_t+(1-\theta)\log(1-n_t)]$
