--- a/Macro/PS4/MasonTate_PS4.tex
+++ b/Macro/PS4/MasonTate_PS4.tex
@@ -1,4 +1,4 @@
-%% ECON 8040 - Macro: Problem Set 4 %%
+%% ECON 8041 - Macro: Problem Set 4 %%
 \documentclass[10pt, a4paper]{article}
 \usepackage[top=3cm, bottom=4cm, left=3.5cm, right=3.5cm]{geometry}
 \usepackage{amsmath,amsthm,amsfonts,amssymb,amscd, fancyhdr, color, comment, graphicx, environ}
@@ -142,6 +142,7 @@
     \begin{center}
       ${\max\atop{k_t}} \{\frac{zk_t+(1-\delta)k_t-zk_t+(1-\delta)k_t(1+(\beta A))^{\frac{1}{\sigma}}}{1-\sigma}+\beta\frac{A}{1-\sigma}\frac{zk_t+(1-\delta)k_t(1+(\beta A)^{\frac{1}{\sigma}})}{1-\sigma}\}$ \\ 
       $ =  $
+    \end{center}
 \section{Question 2}
   \subsection*{Problem}
     Let $n_t$ denote hours worked. Consider the following planning problem ($n_t$ is hours worked)
@@ -188,7 +189,7 @@
   \subsection{Problem}
     Consider the following planning problem
     \begin{center}
-      $w(\bar k_0)={\max\atop{\{(c_t,k_{t+1},x_t)\}_{t=0}^{\infty}}}\sum^{\infty}{t=0}\beta^t\theta_t\log c_t$
+      $w(\bar k_0)={\max\atop{\{(c_t,k_{t+1},x_t)\}_{t=0}^{\infty}}}\sum^{\infty}_{t=0}\beta^t\theta_t\log c_t$
     \end{center}
     s.t.
     \begin{center}
